--- a/index.html
+++ b/index.html
@@ -9,5 +9,93 @@
   <script src="main.js"></script>
 </head>
 <body>
-
+  <div class="calculator">
+    <div class="display">
+      <div class="gap">
+        <p>
+          gap
+        </p>
+      </div>
+      <div class="problem">
+        <p>
+          356 x 24
+        </p>
+      </div>
+      <div class="solution">
+        <p>
+          8,760
+        </p>
+      </div>
+    </div>
+    <div class="numpad">
+      <div class="row-1 row">
+        <div class="key">
+          AC
+        </div>
+        <div class="key">
+          CE
+        </div>
+        <div class="key">
+          %
+        </div>
+        <div class="key">
+          x
+        </div>
+      </div>
+      <div class="row-2 row">
+        <div class="key">
+          7
+        </div>
+        <div class="key">
+          8
+        </div>
+        <div class="key">
+          9
+        </div>
+        <div class="key">
+          -
+        </div>
+      </div>
+      <div class="row-3 row">
+        <div class="key">
+          4
+        </div>
+        <div class="key">
+          5
+        </div>
+        <div class="key">
+          6
+        </div>
+        <div class="key">
+          +
+        </div>
+      </div>
+      <div class="tworows">
+        <div class="threecolumns">
+          <div class="row-4 row">
+            <div class="key">
+              1
+            </div>
+            <div class="key">
+              2
+            </div>
+            <div class="key">
+              3
+            </div>
+          </div>
+          <div class ="row-5 row">
+            <div class="zero">
+              0
+            </div>
+            <div class="key">
+              .
+            </div>
+          </div>
+        </div>
+        <div class="equals">
+          =
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
