--- a/index.html
+++ b/index.html
@@ -29,65 +29,65 @@
     </div>
     <div class="numpad">
       <div class="row-1 row">
-        <div class="key">
+        <div class="key arithmetic">
           AC
         </div>
-        <div class="key">
+        <div class="key arithmetic">
           CE
         </div>
-        <div class="key">
-          %
+        <div class="key arithmetic">
+          ÷
         </div>
-        <div class="key">
+        <div class="key arithmetic">
           x
         </div>
       </div>
       <div class="row-2 row">
-        <div class="key">
+        <div class="key num">
           7
         </div>
-        <div class="key">
+        <div class="key num">
           8
         </div>
-        <div class="key">
+        <div class="key num">
           9
         </div>
-        <div class="key">
+        <div class="key arithmetic">
           -
         </div>
       </div>
       <div class="row-3 row">
-        <div class="key">
+        <div class="key num">
           4
         </div>
-        <div class="key">
+        <div class="key num">
           5
         </div>
-        <div class="key">
+        <div class="key num">
           6
         </div>
-        <div class="key">
+        <div class="key arithmetic">
           +
         </div>
       </div>
       <div class="tworows">
         <div class="threecolumns">
           <div class="row-4 row">
-            <div class="key">
+            <div class="key num">
               1
             </div>
-            <div class="key">
+            <div class="key num">
               2
             </div>
-            <div class="key">
+            <div class="key num">
               3
             </div>
           </div>
           <div class ="row-5 row">
-            <div class="zero">
+            <div class="zero num">
               0
             </div>
-            <div class="key">
+            <div class="key num">
               .
             </div>
           </div>
